fix overflow

--- a/pages/resume/Resume.scss
+++ b/pages/resume/Resume.scss
@@ -21,7 +21,6 @@
     position: relative;
     margin: 0 auto;
     padding: 1rem;
-    width: 100%;
     max-width: 76rem;
     background-color: #ffffff;
     color: $plum;
